# ComfyUI-PromptWrapper

./: README.md  __init__.py  pyproject.toml
assets/: config.json
assets/zh/: Jewelry_datas.jsonl  action_datas.jsonl  age_datas.jsonl  animal_datas.jsonl  animal_ears_datas.jsonl  animal_horn_datas.jsonl  animal_tail_datas.jsonl  animal_wings_datas.jsonl  arms_action_datas.jsonl  arms_decoration_datas.jsonl  aura_datas.jsonl  background_datas.jsonl  beard_color_datas.jsonl  beard_length_datas.jsonl  beard_style_datas.jsonl  body_part_datas.jsonl  body_type_datas.jsonl  chest_action_datas.jsonl  chest_decoration_datas.jsonl  chest_type_datas.jsonl  clothes_color_datas.jsonl  clothes_datas.jsonl  cloud_datas.jsonl  color_datas.jsonl  composition_datas.jsonl  decorate_datas.jsonl  description_datas.jsonl  down_clothes_datas.jsonl  draw_artist_datas.jsonl  draw_style_datas.jsonl  ears_decoration_datas.jsonl  expression_datas.jsonl  eyebrows_color_datas.jsonl  eyebrows_style_datas.jsonl  eyelashs_color_datas.jsonl  eyelashs_style_datas.jsonl  eyes_color_datas.jsonl  eyes_shape_datas.jsonl  (+75 more)
modules/: build_prompt.py  config.py  dataset.py  hunyuan_translation.py  opus_translation.py  t5_translation.py
nodejs/: prompt_combine.js  prompt_preview.js
nodes/: prompt_combine.py  prompt_custom.py  prompt_draw_artist.py  prompt_draw_style.py  prompt_generate.py  prompt_light.py  prompt_math.py  prompt_negative.py  prompt_portrait.py  prompt_preview.py  prompt_randoms.py  prompt_replace.py  prompt_save.py  prompt_scenery.py  prompt_style.py  prompt_text.py  prompt_translation.py
